--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,8 +4,8 @@
   "icons": [
     {
       "src": "favicon.svg",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "sizes": "any",
+      "type": "image/svg+xml"
     }
   ],
   "start_url": ".",
