--- a/firebase.json
+++ b/firebase.json
@@ -1,7 +1,10 @@
 {
   "hosting": {
     "public": "dist",
-    "ignore": [],
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"],
     "rewrites": [
       {
         "source": "**",
