--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "tw-elements": "^1.0.0-alpha12",
+    "uuid": "^8.3.2",
     "vite-plugin-svgr": "^2.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/uuid": "^8.3.4",
     "@vitejs/plugin-react": "^1.3.0",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
