--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vite-plugin-svgr": "^2.1.0"
   },
   "devDependencies": {
+    "@iconify/react": "^3.2.2",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/uuid": "^8.3.4",
