--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "daisyui": "^2.17.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "tw-elements": "^1.0.0-alpha12",
     "uuid": "^8.3.2",
     "vite-plugin-svgr": "^2.1.0"
   },
