--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "daisyui": "^2.17.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-syntax-highlighter": "^15.5.0",
     "uuid": "^8.3.2",
     "vite-plugin-svgr": "^2.1.0"
   },
@@ -18,6 +19,7 @@
     "@iconify/react": "^3.2.2",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/react-syntax-highlighter": "^15.5.5",
     "@types/uuid": "^8.3.4",
     "@vitejs/plugin-react": "^1.3.0",
     "autoprefixer": "^10.4.7",
